-Updated the build file to 2.0.0.0
-Updated StructureMap to trunk version
-Re-designed entire module and configuration mechanism.  Reworked feature modules and updated unit tests.  Fixed all samples.
-Moved SafeToString to the PresentationFramework assembly and made it internal so that it would stop showing up on all objects.
-Some refactoring/renaming to IMetadataContainer.
-A major refactoring of action internals for greater extensibility. Removed ActionHost and ActionFactory.  Added IActionLocator and IActionBuilder.
-Added IViewModelDescriptionFactory and IViewModelDescription for future metadata discovery around conventions.

V1.1 RTW
-Added pre-initialization hooks to CaliburnApplication via Marco Amendola's patch.
-Redesign of IThreadPool.  AsynchronousAction will now pass itself as state when enqueing the background task.
-Closed ticket #4672 by making PropertyChangedBase.PropertyChanged virtual.
-Applied jagregory's patch to add single key gestures to WPF and Caliburn.
-Applied marcoamendola's patch for enabling property path syntax with Preview and Dependency attributes. So you can now do things like [Dependencies("Model.IsValid")].
-Applied marcoamendola's patch enabling type hinting for polymorphic databinding in Caliburn.Testability.
-Applied etobi's patch to greatly improve Caliburn's parameter parsing in ActionMessages and CommandMessages. See http://caliburn.codeplex.com/WorkItem/View.aspx?WorkItemId=4644 for an explanation.
-Closed ticket #4826. DefaultWindowManager now sets WindowStartupLocation to CenterOwner for UserControls hosted in windows. Title was enhanced to databind to IPresenter.DisplayName if model implements this interface.
-Closed ticket #4833. Fixed an issue with ViewMetadata and invalid Windows in DefaultViewStrategy.
-Fixed a bug with DefaultWindowManager which caused errors when creating main windows from a user control.